	ui/icon.c, ui/inputbox.c, ui/keypad.c, ui/keypress.c, ui/keytrap.c,
	ui/listbox.c, ui/menu.c, ui/menubar.c, ui/message.c, ui/mouse.c,
	ui/number.c, ui/popup.c, ui/radio.c, ui/scroll.c, ui/ui.c,
	ui/uidraw.c, ui/userbox.c, ui/window.c: include u_mem.h and pstypes.h
	instead of d1-style mem.h and types.h
	* main/editor/texpage.c: do texture replacement for any mission

2005-01-23  Jason Owen  <shannara256@yahoo.com>

	* arch/ogl/gr.c: fix bug #2085: don't print OGL extensions, since this
	may crash printf if the list of extensions is huge

2005-01-23  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/collide.c: fix bug #2140: even ifndef NETWORK do last level hack
	only on last level of built-in mission.
	* main/gauges.c: fix bug #2110: redraw energy/afterburner gauges
	whenever necessary
	* arch/ogl/gr.c, include/cfile.h, main/config.c, main/newdemo.c,
	main/playsave.c, main/state.c, misc/args.c: change cfopen to use
	buffers (speeding it up), and use cfopen instead of
	PHYSFS_openRead/PHYSFS_openWrite where appropriate
	* include/nocfile.h, main/editor/kmine.c, main/editor/mine.c: make
	sure nocfile.h and cfile.h are never both included

2005-01-10  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/bmread.c, main/dumpmine.c, main/gameseq.c, main/piggy.c:
	fix bug #1676 (filling up of OLG texture list)

2005-01-07  Alexander Zielke  <vulture@vultures-nest.de>

	* main/state.c: fix problems with copying/deleting save files

	* main/automap.c: make automap fonts transparent.

2005-01-07  Bradley Bell  <btb@icculus.org>

	* main/menu.c: In Load Level, if there is no current mission,
	select one

2005-01-05  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gameseq.c: Free polymodel data before reloading ham file.

	* arch/ogl/gr.c: Implement fading in ogl_urect()

	* main/gauges.c: Draw ship before shields in HUD.

2004-12-23  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/editor/centers.c: Use both ints with the robot producer
	flags.
