@@ -1,4 +1,4 @@
-/* $Id: medwall.c,v 1.4 2004-12-24 05:17:09 btb Exp $ */
+/* $Id: medwall.c,v 1.5 2005-01-24 22:24:10 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -19,7 +19,7 @@ COPYRIGHT 1993-1998 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
  */
 
 #ifdef RCS
-static char rcsid[] = "$Id: medwall.c,v 1.4 2004-12-24 05:17:09 btb Exp $";
+static char rcsid[] = "$Id: medwall.c,v 1.5 2005-01-24 22:24:10 schaffner Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -76,6 +76,8 @@ typedef struct count_wall {
 } count_wall;
 
 //---------------------------------------------------------------------
+extern void create_removable_wall(segment *sp, int sidenum, int tmap_num);
+
 // Add a wall (removable 2 sided)
 int add_wall(segment *seg, short side)
 {
