@@ -23,6 +23,7 @@
 	ui/uidraw.c, ui/userbox.c, ui/window.c: include u_mem.h and pstypes.h
 	instead of d1-style mem.h and types.h
 	* main/editor/texpage.c: do texture replacement for any mission
+	* main/editor/medwall.c: add prototype for create_removable_wall
 
 2005-01-23  Jason Owen  <shannara256@yahoo.com>
 
